# skill-packager-skill

./: .gitignore  CHANGELOG.md  README.md  VERSIONING.md  meta.json  skill-packager.json
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/: .gitignore  .windsurfrules  CHANGELOG.md  README.md  pyproject.toml  setup_repo.py
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/.cursor/rules/: proof-engine.mdc
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/.github/workflows/: ci.yml  release.yml
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/chatgpt/: system-prompt.md
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/claude-plugin/: plugin.json
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/skill/agents/: openai.yaml
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/skill/references/: advanced-patterns.md  environment-and-sources.md  hardening-rules.md  output-specs.md  self-critique-checklist.md  template-absence.md  template-numeric.md  template-qualitative.md
skill-packager-workspace/iteration-1/eval-1-universal-repo/without_skill/outputs/proof-engine-skill/skill/scripts/: __init__.py  ast_helpers.py  computations.py  extract_values.py  fetch.py  latex_text.py  smart_extract.py  source_credibility.py  (+2 more)
(+116 files in other folders)
